--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script>
     function Password()
       {
-        document.GetElementById('pass').innerHTML = "123";
+        document.getElementById('pass').innerHTML = "123";
       }
   </script>
 </head>
